updated css and html

--- a/index.html
+++ b/index.html
@@ -3,30 +3,36 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Carrois+Gothic+SC&family=Megrim&family=Orbitron:wght@500&display=swap"
+      rel="stylesheet"/>
+      <!--added a link for the type of font that suit the site-->
     <link rel="stylesheet" href="css/style.css" />
+    <!--add a link to the style sheet for the index file for its dedicated styles for its page-->
+    
     <link rel="stylesheet" href="css/shared.css" />
+    <!--made a shared.css file for shared styled elements-->
     <title>Travel Beyond</title>
   </head>
 
   <body>
     <main>
       <header>
-        <div>
+        <div id="top-header">
           <h1>Travel Beyond</h1>
         </div>
         <nav>
-          <a href="index.html">Home</a>
           <a href="planet.html">Planets</a>
           <a href="contact.html">Contact</a>
         </nav>
       </header>
-      <div>
-        <h1>Travel Beyond</h1>
-        <h3>
-          Travel with no limits to you're imagination and Discover along the
-          way.
-        </h3>
+      <!--made an id for the nav section-->
+      <div id="mid-content">
+        <h1>Travel Guild</h1>
+        <h3>Wander with no limits to discover the unknow.</h3>
+        <a href="planet.html">Planets</a>
       </div>
+      <!--sectioned out the mid content and made an id for it-->
     </main>
   </body>
 </html>
