--- a/contact.html
+++ b/contact.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/shared.css" />
+    <!--made a shared.css file for shared styled elements-->
+    <link rel="stylesheet" href="css/contact.css" />
+     <!--add a link to the style sheet for the index file for its dedicated styles for its page-->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Carrois+Gothic+SC&family=Megrim&family=Orbitron:wght@500&display=swap"
+      rel="stylesheet"/>
+      <!--added a link for the type of font that suit the site.-->
     <title>Travel Beyond</title>
   </head>
 
   <body>
     <header>
-
-        <h1>Travel Beyond</h1>
+      <h1>Travel Beyond</h1>
 
       <nav>
         <a href="index.html">Home</a>
@@ -18,21 +24,23 @@
         <a href="contact.html">Contact</a>
       </nav>
     </header>
- 
-      <h1>Contact Info</h1>
 
-      <table id="contact-info">
-        <tr>
-          <td>Company</td>
-          <td>Phone #</td>
-          <td>Location</td>
-        </tr>
-        <tr>
-          <td>Travel Beyond</td>
-          <td>123-456-7890</td>
-          <td>Netherlands</td>
-        </tr>
-      </table>
+    <h1>Contact Info</h1>
 
+    <table id="contact-info">
+      <!--made an id for the table-->
+      <tr id="top-info">
+        <!--id for the top info for the its different style then the rest of the tr-->
+        <td>Company</td>
+        <td>Phone #</td>
+        <td>Location</td>
+      </tr>
+      <tr id="bottom-info">
+        <!--made an id for the table row for the bottom-->
+        <td>Travel Beyond</td>
+        <td>123-456-7890</td>
+        <td>Netherlands</td>
+      </tr>
+    </table>
   </body>
 </html>
