final version for css week 2

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
       rel="stylesheet"/>
       <!--added a link for the type of font that suit the site-->
     <link rel="stylesheet" href="css/style.css" />
-    <!--add a link to the style sheet for the index file for its dedicated styles for its page-->
+    <!--add a link to the style sheet for the index file for its
+       dedicated styles for its page-->
     
     <link rel="stylesheet" href="css/shared.css" />
     <!--made a shared.css file for shared styled elements-->
@@ -29,7 +30,7 @@
       <!--made an id for the nav section-->
       <div id="mid-content">
         <h1>Travel Guild</h1>
-        <h3>Wander with no limits to discover the unknow.</h3>
+        <h3>Wander with no limits to discover the unknown.</h3>
         <a href="planet.html">Planets</a>
       </div>
       <!--sectioned out the mid content and made an id for it-->
